--- a/ScraperGUI/main.css
+++ b/ScraperGUI/main.css
@@ -1,30 +1,7 @@
-.manufactListItem {
-  list-style-type: none;
-}
 .infoList {
-
-}
-
-.competitorListItem {
   list-style-type: none;
 }
-#page_title {
-  text-align: center;
-}
 
-#infoDisplay {
-  width: 100%;
+#info_display_box {
   height: 50vh;
-}
-
-#manufactListDiv {
-  border: 1px solid black;
-  text-align: center;
-  color: blue;
-}
-
-#competitorListDiv {
-  border: 1px solid black;
-  text-align: center;
-  color: blue;
 }
